fixed spacing errors and added twitter bootstrap to portfolio page

--- a/fewd39practice.css
+++ b/fewd39practice.css
@@ -1,11 +1,5 @@
-#background {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  left: 0px;
-  right: 0px;
-  top: 0px;
-  z-index: -1;
+.container {
+  max-width: 730px;
 }
 
 .stretch {
@@ -35,8 +29,10 @@ h2 {
   font-family: 'Amatic SC', cursive;
 }
 
-nav {
-  padding-top: 30px;
+.list-inline {
+  padding-right: 50px;
+  padding-left: 70px;
+  display: inline-block;
 }
 
 nav ul {
@@ -66,4 +62,8 @@ nav a {
   padding-top: 20px;
   padding-bottom: 20px;
   font-family: 'Amatic SC', cursive;
+}
+
+.container {
+    max-width: 730px;
 }
